--- a/styles/exhibitions.css
+++ b/styles/exhibitions.css
@@ -293,12 +293,12 @@ p.visit {
 @media only screen and (min-width: 992px) {
   /* Header
 --------------------*/
-  .logo {
+  /* .logo {
     width: 350px;
   }
   .logo img {
     width: 350px;
-  }
+  } */
   /* Main
 --------------------*/
   .photo-gallery img {
