--- a/styles/home.css
+++ b/styles/home.css
@@ -597,7 +597,7 @@ h6 {
 @media only screen and (min-width: 992px) {
   /* Header
 --------------------*/
-  .logo {
+  /* .logo {
     width: 350px;
     margin-left: 5%;
     margin-top: 1rem;
@@ -605,7 +605,7 @@ h6 {
   }
   .logo img {
     width: 350px;
-  }
+  } */
   .fading-background_1,
   .fading-background_2 {
     top: 97px;
