--- a/styles/get_involved.css
+++ b/styles/get_involved.css
@@ -3,34 +3,29 @@
 
 /* main 
 --------------------*/
-.main-wrapper {
+/* .main-wrapper {
   width: 85%;
   margin: 0 auto;
   padding-top: 0;
-}
+} */
 
-section.main-content {
+/* section.main-content {
   margin: 0 auto;
   display: flex;
   flex-direction: column;
-}
+} */
 
-h1.large-screen {
-  display: none;
-}
 
-h1 {
+/* h1 {
   font-family: var(--proxima);
   font-size: 1.5rem;
   font-weight: bold;
-  /* text-transform: uppercase; */
   text-align: left;
-  /* background-color: var(--dark-purple); */
   color: var(--dark-purple);
   padding: 1rem 5%;
   margin: 25px 5% 0 0;
   border-radius: 5px;
-}
+} */
 
 h4 {
   font-size: 1.25rem;
@@ -55,13 +50,17 @@ div.support {
   border-radius: 5px;
 }
 
+#get-in-touch-1 {
+  border-radius: 0 0 25px 25px;
+}
+
 /* div.support p {
   width: 90%;
   margin: 0 auto;
   padding-bottom: 16px;
 } */
 
-.get-in-touch {
+/* .get-in-touch {
   margin: 0 auto;
   background-color: #7c68a6;
   color: #fff;
@@ -71,12 +70,14 @@ div.support {
   display: flex;
   flex-direction: column;
 }
+
 .get-in-touch > p {
   font-family: var(--proxima);
   font-weight: bold;
   text-transform: uppercase;
   margin: 16px 0;
 }
+
 p.button {
   font-family: var(--sofia);
   display: inline-block;
@@ -95,7 +96,7 @@ p.button {
 }
 p.button:hover {
   scale: 1.1;
-}
+} */
 
 /* styles that change
 --------------------*/
@@ -103,34 +104,28 @@ p.button:hover {
 @media only screen and (min-width: 992px) {
   /* Main
 --------------------*/
-  section.main-content {
-    flex-direction: row;
-    gap: 1rem;
+  #item-1,
+  #item-2,
+  #item-3
+    {
+    flex: 1;
   }
 }
+
 @media only screen and (min-width: 1200px) {
   /* Main
 --------------------*/
   main {
     background-color: #d8d8d8;
   }
-  .main-wrapper {
+
+  /* .main-wrapper {
     background-color: white;
     padding-top: 50px;
-  }
-  h1.mobile {
-    display: none;
-  }
+  } */
+
   h4 {
     display: none;
-  }
-  h1.large-screen {
-    width: 90%;
-    display: block;
-    margin: 0 auto 16px auto;
-    font-size: 2rem;
-    text-transform: capitalize;
-    text-align: center;
   }
 
   /* h2 {
@@ -142,7 +137,7 @@ p.button:hover {
     width: 90%;
     font-size: 1.125rem;
   }
-  .get-in-touch {
+  /* .get-in-touch {
     width: 90%;
     flex-direction: row;
     align-items: baseline;
@@ -158,13 +153,6 @@ p.button:hover {
   }
   .bottom-section {
     width: 85%;
-  }
+  } */
 }
-@media only screen and (min-width: 1600px) {
-  h1.large-screen {
-    margin-bottom: 32px;
-  }
-  section.main-content {
-    gap: 32px;
-  }
-}
+
