--- a/styles/about_us.css
+++ b/styles/about_us.css
@@ -3,22 +3,20 @@
 
 /* main 
 --------------------*/
-main {
-  background-color: #d8d8d8;
-}
 
-.main-wrapper {
+
+/* .main-wrapper {
   width: 100%;
   margin: 0 auto;
   background-color: white;
-}
+}  */
 
-section {
+/* section {
   width: 85%;
   margin: 0 auto;
-}
+} */
 
-h1 {
+/* h1 {
   font-family: var(--proxima);
   font-size: 1.5rem;
   font-weight: bold;
@@ -28,8 +26,8 @@ h1 {
   margin: 25px 7.5% 32px 0;
   padding: 12px 32px;
   border-radius: 0 0 50px 0;
-}
-h1::before {
+} */
+/* h1::before {
   content: "“";
   font-size: 1.5rem;
 }
@@ -37,19 +35,20 @@ h1::before {
 h1::after {
   content: "”";
   font-size: 1.5rem;
-}
+} */
 
-section.vision {
+/* section.vision {
   display: flex;
   flex-direction: column;
   gap: 16px;
-}
-div.vision {
+} */
+/* div.vision {
   width: 100%;
   background-color: var(--light-grey);
   padding-top: 16px;
   border-radius: 5px;
-}
+} */
+
 div.item-1 {
   font-family: var(--sofia);
   font-size: 1.125rem;
@@ -57,25 +56,34 @@ div.item-1 {
   background-color: var(--blue);
   color: #fff;
 }
+
 div.vision p {
   width: 90%;
   margin: 0 auto;
   padding-bottom: 16px;
 }
-figure.vision {
+
+/* figure.vision {
   width: 100%;
   height: 100%;
   margin: auto auto;
-}
-.vision img {
+} */
+
+.vision-img {
   width: 100%;
   height: auto;
   margin: 0;
 }
-img.large-screen {
+
+/* img.large-screen {
   display: none;
+} */
+
+#get-in-touch-1 {
+  border-radius: 0 0 25px 25px;
 }
-.get-in-touch {
+
+/* .get-in-touch {
   width: 85%;
   margin: 16px auto;
   background-color: #7c68a6;
@@ -86,12 +94,14 @@ img.large-screen {
   display: flex;
   flex-direction: column;
 }
+
 .get-in-touch > p {
   font-family: var(--proxima);
   font-weight: bold;
   text-transform: uppercase;
   margin: 16px 0;
 }
+
 p.button {
   font-family: var(--sofia);
   display: inline-block;
@@ -110,42 +120,48 @@ p.button {
 }
 p.button:hover {
   scale: 1.1;
-}
-section.tourguides {
+} */
+
+/* section.tourguides {
   width: 100%;
-}
+} */
+
 .image-wrapper {
-  width: 90%;
+  width: 95%;
+  margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
-  justify-content: flex-start;
-  gap: 16px;
-  margin-left: 16px;
-  padding-top: 16px;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
 }
-figure.tourguides {
+
+/* figure.tourguides {
   display: block;
   width: 150px;
   justify-self: start;
   margin: 0;
   padding: 0;
   border-radius: 15px;
-}
-.tourguides img {
+} */
+
+.tourguide img {
   display: block;
-  width: 150px;
+  width: 125px;
   justify-self: start;
   margin: 0;
   padding: 0;
-  border-radius: 15px;
+  border-radius: 10px;
 }
+
 figcaption {
   font-family: var(--proxima-soft);
   text-align: center;
   font-weight: bold;
   padding-top: 8px;
 }
-h4 {
+
+/* h4 {
   font-family: var(--sofia);
   font-size: 1.25rem;
   background-color: var(--dark-purple);
@@ -153,23 +169,24 @@ h4 {
   padding: 12px 16px;
   margin: 32px 5% 0 0;
   border-radius: 0 0 50px 0;
-}
-h5 {
+} */
+
+/* h5 {
   font-size: 1.125rem;
   margin-left: 5%;
   margin-bottom: 8px;
   margin-top: 0;
-}
-p.tourguides {
+} */
+
+.tourguide-quote {
+  width: 100%;
   font-family: var(--sofia);
   font-size: 1.125rem;
   font-style: italic;
   text-align: center;
   background-color: var(--purple);
   color: #fff;
-  padding: 12px 32px;
-  margin-bottom: 16px;
-  margin-left: 5%;
+  padding: 1rem 2rem;
   border-radius: 50px 0 0 0;
 }
 /* styles that change
@@ -177,7 +194,7 @@ p.tourguides {
 @media only screen and (min-width: 576px) {
   /* Main
 --------------------*/
-  h1 {
+  /* h1 {
     font-size: 1.875rem;
     text-align: center;
   }
@@ -186,12 +203,12 @@ p.tourguides {
   }
   h1::after {
     font-size: 1.875rem;
-  }
+  } */
 }
 @media only screen and (min-width: 768px) {
   /* Main
 --------------------*/
-  h1 {
+  /* h1 {
     font-size: 2.25rem;
   }
   h1::before {
@@ -199,47 +216,55 @@ p.tourguides {
   }
   h1::after {
     font-size: 2.25rem;
-  }
+  } */
 }
 @media only screen and (min-width: 992px) {
   /* Main
 --------------------*/
-  section {
+  /* section {
     width: 90%;
-  }
-  div.vision {
+  } */
+  /* div.vision {
     font-size: 1.125rem;
-  }
-  .get-in-touch {
+  } */
+
+  /* .get-in-touch {
     width: 90%;
-  }
+  } */
   .item-1 {
     grid-area: introduction;
   }
+
   .item-2 {
     grid-area: image;
+    height: 100%;
   }
+
   .item-3 {
     grid-area: paragraph-1;
   }
+
   .item-4 {
     grid-area: paragraph-2;
   }
+
   .item-5 {
     grid-area: paragraph-3;
   }
+
   section.vision {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr auto auto auto;
+    /* grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr auto auto auto; */
     grid-template-areas:
-      "introduction introduction paragraph-3 paragraph-3"
-      "paragraph-1 paragraph-1 paragraph-3 paragraph-3"
-      "paragraph-1 paragraph-1 image image"
-      "paragraph-2 paragraph-2  image image"
-      "paragraph-2 paragraph-2 image image";
+      "introduction introduction paragraph-1 paragraph-1"
+      "image image paragraph-1 paragraph-1"
+      "image image paragraph-3 paragraph-3"
+      "paragraph-2 paragraph-2 paragraph-3 paragraph-3"
+      "paragraph-2 paragraph-2 paragraph-3 paragraph-3";
   }
 }
+
 @media only screen and (min-width: 1200px) {
   /* Main
 --------------------*/
@@ -250,15 +275,16 @@ p.tourguides {
     padding-top: 50px;
   } */
 
-  img.mobile {
+  /* img.mobile {
     display: none;
   }
 
   img.large-screen {
     display: block;
-  }
+    height: 100%;
+  } */
   
-  h1 {
+  /* h1 {
     width: 90%;
     font-size: 2.5rem;
     margin: 0 auto 32px auto;
@@ -266,16 +292,20 @@ p.tourguides {
     text-align: center;
     border-radius: 0;
   }
+
   h1::before {
     font-size: 2.5rem;
   }
+
   h1::after {
     font-size: 2.5rem;
-  }
-  h5 {
+  } */
+
+  /* h5 {
     font-size: 1.25rem;
-  }
-  .get-in-touch {
+  } */
+
+  /* .get-in-touch {
     flex-direction: row;
     align-items: baseline;
     justify-content: center;
@@ -284,24 +314,21 @@ p.tourguides {
   }
   .get-in-touch p {
     font-size: 1.35rem;
-  }
-  h4 {
+  } */
+
+  /* h4 {
     width: 90%;
     margin: 64px auto 16px auto;
     font-size: 2rem;
     text-align: center;
-  }
-  .image-wrapper {
-    margin-left: 5%;
-  }
+  } */
+
   .tourguide img {
-    width: 200px;
-    height: 200px;
-    border-radius: 15px;
+    width: 150px;
+    height: 150px;
   }
-  p.tourguides {
-    width: 90%;
-    margin: 16px auto 64px auto;
+
+  .tourguides-quote {
     font-size: 1.5rem;
     text-align: center;
   }
@@ -310,14 +337,14 @@ p.tourguides {
   /* Main
 --------------------*/
   section.vision {
-    grid-template-columns: 1fr 1fr auto;
-    grid-template-rows: auto;
     grid-template-areas:
-      "introduction paragraph-2 image"
-      "paragraph-1 paragraph-2 image"
-      "paragraph-1 paragraph-3 image"
-      "paragraph-1 paragraph-3 image";
-  }
+        "introduction introduction paragraph-1 paragraph-1"
+        "image image paragraph-1 paragraph-1"
+        "image image paragraph-2 paragraph-2"
+        "image image paragraph-2 paragraph-2"
+        "image image paragraph-3 paragraph-3"
+        "image image paragraph-3 paragraph-3";
+    }
 }
 @media only screen and (min-width: 1800px) {
   /* Main
@@ -325,6 +352,7 @@ p.tourguides {
   .item-1 p {
     font-size: 1.25rem;
   }
+
   .item-3,
   .item-4,
   .item-5 {
