--- a/styles/in_common.css
+++ b/styles/in_common.css
@@ -11,11 +11,15 @@ html {
 
 body {
   background-color: white;
-  color: 000;
+  color: #000;
   font-family: var(--sofia);
   font-size: 1rem;
   width: 100%;
   margin: 0;
+}
+
+main {
+  background-color: #d8d8d8;
 }
 
 .fa {
@@ -54,6 +58,7 @@ a {
 }
 
 .main-heading {
+  width: 100%;
   font-family: var(--proxima);
   font-size: 1.5rem;
   font-weight: bold;
@@ -508,12 +513,12 @@ ul li {
   background-color: #fff;
 } */
 
-.bottom-section {
+/* .bottom-section {
   width: 100%;
   background-color: white;
   margin: 0 auto;
   padding-top: 40px;
-}
+} */
 
 .newsletter-wrapper {
   width: 100%;
@@ -619,12 +624,13 @@ form.newsletter {
   border-radius: 5px;
 }
 
-.image-box {
+.image-box, .image-box img {
   border-radius: 5px;
 }
 
 .info-box-heading {
   font-family: var(--proxima-soft);
+  font-size: 1.25rem;
   margin: 0;
   padding: 0;
 }
