visit page improved

--- a/styles/in_common.css
+++ b/styles/in_common.css
@@ -78,8 +78,8 @@ a {
 }
 
 .get-in-touch {
-  background-color: #7c68a6;
-  color: #fff;
+  background-color: #7c68a640;
+  color: var(--dark-purple);
   font-size: 1.25rem;
   text-align: center;
   border-radius: 0 50px;
@@ -868,7 +868,6 @@ h6 {
   .section-container {
       flex-direction: row;
       flex-wrap: wrap;
-      gap: 1rem;
     }
 
   /* Header
